[FIX] 'domain_alias' field

--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -121,7 +121,7 @@
                             <field name="install_command_ids" context="{'server_id':id}"/>
                         </group>
                     </page>
-                    <page string="Catch-All">
+                    <page string="Catch-All Aliases">
                         <group>
                             <field name="local_aliases_path"/>
                             <field name="virtual_aliases_path"/>
