--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -74,11 +74,13 @@
                     <button icon="fa-download" type="object" string="Dump" class="oe_inline oe_stat_button" name="dump_db" attrs="{'invisible':[('state','!=','active')]}"/>
                     <button icon="fa-sun-o" type="object" string="Create" class="oe_inline oe_stat_button" name="create_db" attrs="{'invisible':[('state','!=','draft')]}"/>
                     <button icon="fa-copy" type="action" string="Duplicate" class="oe_stat_button" name="%(action_infrastructure_duplicate_db_wizard)d" attrs="{'invisible':[('state','!=','active')]}"/>
+                    <button type="object" string="Change Password" class="oe_stat_button" name="change_admin_pass_db" attrs="{'invisible':[('state','!=','active')]}"/>
                     <button icon="fa-trash-o" type="object" string="Drop" class="oe_stat_button" name="drop_db" attrs="{'invisible':[('state','!=','active')]}"/>
                     <button type="object" string="Kill Connections" class="oe_stat_button" name="kill_db_connection" attrs="{'invisible':[('state','!=','active')]}"/>
                 </div>
                  <group>
                     <group>
+                        <field name="admin_password" password="True"/>
                         <field name="demo_data"/>
                         <field name="issue_date"/>
                         <field name="deactivation_date"/>
@@ -97,11 +99,12 @@
                             <field name="smtp_server_id" class="oe_inline"/>
                             <button class="oe_link oe_inline" type="object" name="upload_mail_server_config" string="Upload Config"/>
                         </div>
-                        <label for="alias_domain"/>
+                        <field name="domain_alias"/>
+<!--                         <label for="alias_domain"/>
                         <div class="oe_inline">
                             <field name="alias_domain" class="oe_inline"/>
                             <button class="oe_link oe_inline" type="object" name="config_catchall" string="Config Catchall"/>
-                        </div>
+                        </div> -->
                     </group>
                  </group>
                  <group>
