--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -69,6 +69,7 @@
                 <group>
                     <group>
                         <field name="server_id" invisible="1"/>
+                        <field name="environment_id" invisible="1"/>
                         <field name="user"/>
                         <label for="admin_pass"/>
                             <div>
